@@ -3,45 +3,36 @@
     <title>Static Elements Page</title>
   </head>
   <body>
-    <h3>Text Field</h3>
+    <p>Static Elements Page</p>
     <input id="text_field_id" name="text_field_name" class="text_field_class"
            size="40" type="text" />
 
-    <h3>Hidden Field</h3>
     <input id="hidden_field_id" name="hidden_field_name" class="hidden_field_class"
             size="40" type="hidden" value="12345" />
 
-    <h3>Text Area</h3>
     <textarea rows="2" cols="20" id="text_area_id" class="text_area_class" name="text_area_name"></textarea>
 
-    <h3>Select List</h3>
     <select name="sel_list_name" id="sel_list_id", class="sel_list_class">
       <option value="option1">Test 1</option>
       <option value="option2">Test 2</option>
     </select>
 
 
-    <h3>Link</h3>
     <a href="success.html" id="link_id" name="link_name" class="link_class" >Google Search</a>
 
-    <h3>Check Boxes</h3>
     <input id="cb_id" name="cb_name" class="cb_class" type="checkbox" value="1" />
 
-    <h3>Radio Buttons</h3>
     <input type="radio" id="milk_id" name="milk_name" class="milk_class" value="Milk"> Milk <br />
     <input type="radio" id="butter_id" name="butter_name" class="butter_class" value="Butter">Butter
 
-    <h3>Div</h3>
     <div id="div_id" name="div_name" class="div_class">
       page-object rocks!
     </div>
 
-    <h3>Span</h3>
     <span id="span_id" name="span_name" class="span_class">
       My alert
     </span>
 
-    <h3>Table</h3>
     <table id='table_id' name='table_name' class='table_class' border='1'>
       <tr>
         <td>Data1</td><td>Data2</td>
@@ -52,45 +43,38 @@
       </tr>
     </table>
 
-    <h3>Button</h3>
     <form method="get" action="success.html">
       <input id='button_id' name='button_name' class='button_class' type="submit" value="Click Me">
     </form>
 
-    <h3>Image</h3>
     <img src="images/circle.png" id="image_id" name="image_name" class="image_class">
 
-    <h3>Form</h3>
     <form id="form_id" class="form_class" name="form_name" action="/">
     </form>
 
-    <h3>Unordered List</h3>
     <ul id="ul_id" name="ul_name" class="ul_class">
       <li id="li_id" name="li_name" class="li_class">Item One</li>
       <li>Item Two</li>
       <li>Item Three</li>
     </ul>
 
-    <h3>Ordered List</h3>
     <ol id="ol_id" name="ol_name" class="ol_class">
       <li>Number One</li>
       <li>Number Two</li>
       <li>Number Three</li>
     </ol>
 
-    <h3>Links for multi select</h3>
     <a href="success.html">Hello</a>
     <a href="success.html">Hello</a>
     <a href="success.html">Hello</a>
 
-    <h3>Alerts / Confirms / Prompts</h3>
     <input id=alert_button type=button onclick="alert('I am an alert')" value=Alert>
     <input id=confirm_button type=button onclick="this.value = confirm('set the value')" value=Confirm>
     <input id=prompt_button type=button onclick="this.value = prompt('enter your name','John Doe')" value=Prompt>
 
     <h1 id="h1_id" class="h1_class" name="h1_name">h1's are cool</h1>
     <h2 id="h2_id" class="h2_class" name="h2_name">h2's are cool</h2>
-    <h3>New Window</h3>
+    <h3 id="h3_id" class="h3_class" name="h3_name">h3's are cool</h3>
     <a href="success.html" target="_blank">New Window</a>
 
   </body>
