@@ -21,3 +21,7 @@ end
 When(/^I locate a h2 while the script is executing$/) do
   @text = @page.h2_element(:id => 'h2_id').text
 end
+
+When(/^I locate a h3 while the script is executing$/) do
+  @text = @page.h3_element(:id => 'h3_id').text
+end
