@@ -185,4 +185,12 @@ class Page
   h2(:h2_xpath, :xpath => '//h2')
   h2(:h2_class_index, :class => 'h2_class', :index => 0)
   h2(:h2_name_index, :name => 'h2_name', :index =>0)
+
+  h3(:h3_id, :id => 'h3_id')
+  h3(:h3_class, :class => 'h3_class')
+  h3(:h3_name, :name => 'h3_name')
+  h3(:h3_index, :index => 0)
+  h3(:h3_xpath, :xpath => '//h3')
+  h3(:h3_class_index, :class => 'h3_class', :index => 0)
+  h3(:h3_name_index, :name => 'h3_name', :index => 0)
 end
