@@ -303,5 +303,20 @@ module Druid
     def h2_element identifier
       h2_for identifier
     end
+
+    #
+    # Finds a h3
+    #
+    # @param [Hash] identifier how we find a h3. You can use a multiple parameters
+    #  by combining of any of the following except xpath. The valid keys are:
+    #   * :class
+    #   * :id
+    #   * :index
+    #   * :xpath
+    #   * :name
+    #
+    def h3_element identifier
+      h3_for identifier
+    end
   end
 end
