@@ -75,5 +75,9 @@ module Druid
     def h2_element(identifier={:index => 0})
       h2_for(identifier)
     end
+
+    def h3_element(identifier={:index => 0})
+      h3_for(identifier)
+    end
   end
 end
